# CHANGES TO v0.3.10 #

 * `export()` returns a character string. (#82)

# CHANGES TO v0.3.9 #

 * The use of `import()` for SAS, Stata, and SPSS files has been streamlined. Regardless of whether the `haven = TRUE` argument is used, the data.frame returned by `import()` should now be (nearly) identical, with all attributes stored at the variable rather than data.frame level. This is a non-backwards compatible change. (#80)

# CHANGES TO v0.3.8 #

 * Fixed error in export to CSVY with a commented yaml header. (#81, h/t Andrew MacDonald)

# CHANGES TO v0.3.7 #

 * `export()` now allows automatic file compression as tar, gzip, or zip using the `file` argument (e.g., `export(iris, "iris.csv.zip")`).

# CHANGES TO v0.3.6 #

 * Expanded verbosity of `export()` for fixed-width format files and added a commented header containing column class and width information.
 * Exporting factors to fixed-width format now saves those values as integer rather than numeric.
 * Expanded test suite and separated tests into format-specific files. (#51)

# CHANGES TO v0.3.5 #

 * Export of CSVY files now includes commenting the yaml header by default. Import of CSVY accommodates this automatically. (#74)

# CHANGES TO v0.3.3 #

 * Export of CSVY files and metadata now supported by `export()`. (#73)
 * Import of CSVY files now stores dataset-level metadata in attributes of the output data.frame. (#73, h/t Tom Aldenberg)
 * When rio receives an unrecognized file format, it now issues a message. The new internal `.import.default()` and `.export.default()` then produce an error. This enables add-on packages to support additional formats through new s3 methods of the form `.import.rio_EXTENSION()` and `.export.rio_EXTENSION()`.

# CHANGES TO v0.3.2 #

 * Use S3 dispatch internally to call new (unexported) `.import()` and `.export()` methods. (#42, h/t Jason Becker)

# CHANGES TO v0.3.0 #

 * Release to CRAN.